dbprovider/deploy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dbprovider-frontend
  namespace: tolabs
spec:
  ingressClassName: higress
  rules:
    - host: dbprovider.local.892048.xyz
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: dbprovider-frontend
                port:
                  number: 3000
  tls:
    - hosts:
        - dbprovider.local.892048.xyz
      secretName: local.892048.xyz-tls
